--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -3,9 +3,9 @@
         {{#each items}}
         <div class="rc-card-col">
             {{#ifCond linkType '===' "play"}}
-                <a class="rc-card-modal-youtube-video-player" href="{{assetLink}}" target="_self" {{{analyticsAttributes}}}>
+                <a class="rc-card-modal-youtube-video-player" href="{{assetLink}}" {{{analyticsAttributes}}}>
             {{else}}
-                <a href="{{assetLink}}" target="_self" {{{analyticsAttributes}}}>
+                <a href="{{assetLink}}" {{{analyticsAttributes}}}>
             {{/ifCond}}
             <div class="simple-card bg-white" style="height: 310px;">
                 <div class="card-header" style="{{#if thumbnail}}margin-top:35%;{{/if}}">
@@ -33,14 +33,15 @@
                     <div class="card-footer">
                 {{/ifCond}}
                     <span class="card-footer-action">
-                        <svg class="align-middle s-{{linkType}}">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-{{linkType}}"></use>
-                        </svg>
-                        {{#ifCond linkType '===' "play"}}${'Play' @ i18n}{{/ifCond}}
-                        {{#ifCond linkType '===' "download"}}${'Download' @ i18n}{{/ifCond}}
-                        {{#ifCond linkType '===' "view"}}${'View' @ i18n}{{/ifCond}}
-                        <!-- /* WEB-9208 Add Demo Container Card capabilities to Resource Center */ -->
-                        {{#ifCond linkType '===' "demo"}}${'Start' @ i18n}{{/ifCond}}
+                        {{#ifCond type '===' "Trial"}}
+                            <span class="learn-more">{{ctaText}}</span>
+                        {{else}}
+                            <svg class="align-middle s-{{linkType}}">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-{{linkType}}"></use>
+                            </svg>
+                           {{ctaText}}
+                        {{/ifCond}}
+
                     </span>
                 </div>
             </div>
