--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/page/head.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/page/head.html
@@ -67,7 +67,7 @@
     <!--/* WEB-9728 Updated logic for non indexing of non prod pages START */-->
     <sly data-sly-use.runmode="com.bmc.models.RunModes" />
     <sly data-sly-use.multiItems="com.bmc.models.sitemap.SitemapMetaProperty">
-     <meta data-sly-test="${ (multiItems.pageproperty) || (multiItems.pagetemplate)||(multiItems.parentproperty)}" name="robots" content="noindex, nofollow" >
+     <meta data-sly-test="${ (multiItems.pageproperty) || (multiItems.pagetemplate)||(multiItems.parentproperty)}" name="robots" content="noindex, follow" >
      <meta data-sly-test="${ (!multiItems.pageproperty) && (!multiItems.pagetemplate)&&(!multiItems.parentproperty)}" name="robots" content="index, follow">
     </sly>
     <!--/*<meta data-sly-test="${(runmode.mode != 'prod') || (templateName == 'form-thank-you') || (templateName == 'form-thank-you2')}" name="robots" content="noindex, nofollow" >
